--- a/index.html
+++ b/index.html
@@ -10,6 +10,47 @@
   <h2>cerro por causas extrañas</h2> 
   <h3>tusday</h3>
   <p>la señora empanada de la calle belgrano cerro por causas extrañas, el pediorista que fue al lugar se llevo la grata sopresa de encontrarse con la dueña</p>
-<img src="download.jpg"width="300pix"height="150px" alt="la pasteleria es hermosa">
+<img src="img/download.jpg"width="300pix"height="150px" alt="la pasteleria es hermosa">
 </body>
-</html>
+<html>
+  <table border="5">
+<h1> tabla de alumnos </h1>
+<tr>
+  <td>nombre</td>
+  <td>apellido</td>
+  <td>nota</td>
+</tr>
+<tr>
+  <td>carlos</td>
+  <td>rodrigues</td>
+  <td>6</td>
+  <tr>
+    <td>agustin</td>
+    <td>sanchez</td>
+    <td>16</td>
+  </tr>
+  <tr>
+    <td>lucifer</td>
+    <td>los frenos</td>
+    <td>1000</td>
+  </tr>
+</table>
+<br>
+<table border="1">
+  <caption>animales</caption>
+  <tr>
+    <td>...</td>
+    <td>perro</td>
+    <td>gato</td>
+    <td>pez</td>
+  </tr>
+  <tr>
+    <td rowspan="3">caracteristica</td>
+    <td>perro<img src="img/download.webp"width="50" height="50"></td>
+    <td>gato<img src="download.webp"width="50" height="50"></td>
+    <td>pez<img src="download.jpg"width="50" height="50"></td>
+  </tr>
+</table>
+
+
+  
