hice la tarea 2

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>cerro por causas extrañas</h2> 
   <h3>tusday</h3>
   <p>la señora empanada de la calle belgrano cerro por causas extrañas, el pediorista que fue al lugar se llevo la grata sopresa de encontrarse con la dueña</p>
-<img src="img/download.jpg"width="300pix"height="150px" alt="la pasteleria es hermosa">
+<img src="img/pasteleria.jpg"width="300pix"height="150px" alt="la pasteleria es hermosa">
 </body>
 <html>
   <table border="5">
@@ -36,8 +36,8 @@
   </tr>
 </table>
 <br>
-<table border="1">
-  <caption>animales</caption>
+<table border="1"bgcolor="yellow">
+  <caption><b><u>ANIMAL</u></b></caption>
   <tr>
     <td>...</td>
     <td>perro</td>
@@ -46,11 +46,43 @@
   </tr>
   <tr>
     <td rowspan="3">caracteristica</td>
-    <td>perro<img src="img/download.webp"width="50" height="50"></td>
-    <td>gato<img src="download.webp"width="50" height="50"></td>
-    <td>pez<img src="download.jpg"width="50" height="50"></td>
+    <td>perro<img src="img/perro.webp"width="50" height="50"></td>
+    <td>gato<img src="img/gato.webp"width="50" height="50"></td>
+    <td>pez<img src="img/pez.jpg"width="50" height="50"></td>
   </tr>
+  <tr>
+    <td>perro</td>
+    <td><a href="https://www.youtube.com/">ir youtube</a></td>
+    <td>gato</td>
+  </tr>
+  <tr>
+    <td><a href="https://www.nationalgeographic.com/animals/mammals/facts/domestic-dog">ir a la pagina de perros</a></td>
+    <td>lindo</td>
+    <td>nada</td>
+  </tr>
+  <tr>
+    <td colspan="4"><u>los cuatro tipos</u></td>
+  </tr>
+  <tr>
+    <td colspan="4">
+      <ul>
+        <li>perro. (raza cualquiera)</li>
+        <li>gato. (manchas negras)</li>
+        <li>pez. (dorado)</li>
+      </ul>
+    </td>
+  </tr>
+  
 </table>
+<br>
+<h1><u><b>tarea</b></u></h1>
+<ul>
+  <li>contacto</li>
+  <li>horario de atencion</li>
+  <li>servicio tecnico</li>
+  <li>infromacion</li>
+</ul>
+
 
 
   
