hice la tarea 3

--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <title>Pasteleria</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li>inicio</li>
+        <li><a href="./paginas/contacto.html">contacto</a></li>
+        <li><a href="./paginas/horarios.html">horario de atencion</a></li>
+        <li><a href="#section_id">direcciones</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="section_id">
+      <h1>soy una section</h1>
+    </section>
   <h1>La pasteleria de la señora empanada</h1>
   <h2>cerro por causas extrañas</h2> 
   <h3>tusday</h3>
   <p>la señora empanada de la calle belgrano cerro por causas extrañas, el pediorista que fue al lugar se llevo la grata sopresa de encontrarse con la dueña</p>
-<img src="img/pasteleria.jpg"width="300pix"height="150px" alt="la pasteleria es hermosa">
-</body>
+<img src="./img/pasteleria.jpg"width="300pix"height="150px" alt="la pasteleria es hermosa">
+
 <html>
   <table border="5">
 <h1> tabla de alumnos </h1>
@@ -46,9 +60,9 @@
   </tr>
   <tr>
     <td rowspan="3">caracteristica</td>
-    <td>perro<img src="img/perro.webp"width="50" height="50"></td>
-    <td>gato<img src="img/gato.webp"width="50" height="50"></td>
-    <td>pez<img src="img/pez.jpg"width="50" height="50"></td>
+    <td>perro<img src="./img/perro.webp"width="50" height="50"></td>
+    <td>gato<img src="./img/gato.webp"width="50" height="50"></td>
+    <td>pez<img src="./img/pez.jpg"width="50" height="50"></td>
   </tr>
   <tr>
     <td>perro</td>
@@ -74,14 +88,17 @@
   </tr>
   
 </table>
-<br>
-<h1><u><b>tarea</b></u></h1>
-<ul>
-  <li>contacto</li>
-  <li>horario de atencion</li>
-  <li>servicio tecnico</li>
-  <li>infromacion</li>
-</ul>
+</main><br>
+<footer>
+  creado por tobias riffel nacido en 2005 
+</footer>
+</body>
+</html>
+
+
+
+
+
 
 
 
