--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>horarios</title>
 </head>
 <body>
-    
+    <h1>TABLA DE HORARIOS</h1>
+   <table border="3">
+<tr>
+    <td colspan="5">dias de la semana</td>
+</tr>
+<tr>
+    <td>lunes</td>
+    <td>martes</td>
+    <td>miercoles</td>
+    <td>jueves</td>
+    <td>viernes</td>
+</tr>
+<tr>
+    <td>7:30 a 12:00</td>
+    <td>7:30 a 12:00</td>
+    <td>7:30 a 12:00</td>
+    <td>7:30 a 14:00</td>
+    <td>8:00 a 16:00</td>
+</tr>
+<tr>
+    <td>1:30 a 18:00</td>
+    <td>1:30 a 18:00</td>
+    <td>1:30 a 18:00</td>
+    <td>15:00 a 18:00</td>
+    <td></td>
+</tr>
+   </table>
 </body>
 </html>
