--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
   <header>
@@ -18,10 +19,10 @@
   </header>
   <main>
     <section id="section_id">
-      <h1>soy una section</h1>
+      <h1>soy una sectio</h1>
     </section>
-  <h1>La pasteleria de la señora empanada</h1>
-  <h2>cerro por causas extrañas</h2> 
+  <h1 class="h1">pasteleria de la señora empanada</h1>
+  <h2 class="h2">cerro por causas extrañas</h2> 
   <h3>tusday</h3>
   <p>la señora empanada de la calle belgrano cerro por causas extrañas, el pediorista que fue al lugar se llevo la grata sopresa de encontrarse con la dueña</p>
 <img src="./img/pasteleria.jpg"width="300pix"height="150px" alt="la pasteleria es hermosa">
@@ -56,9 +57,9 @@
   <tr>
     <td colspan="4">
       <ul>
-        <li>perro. (raza cualquiera)</li>
-        <li>gato. (manchas negras)</li>
-        <li>pez. (dorado)</li>
+        <li style="color: brown;"> (raza cualquiera)</li>
+        <li style="color: blue;"> (manchas negras)</li>
+        <li style="color: chocolate;"> (dorado)</li>
       </ul>
     </td>
   </tr>
