--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 <footer>
   creado por tobias riffel nacido en 2005 
 </footer>
+<main>
+  <div><p>¡me encanta css!</p></div><br>
+  
+  <div class="azul"></div>
+    <div class="rojo"></div>
+    <div class="verde"></div>
+    <div class="gris"></div>
+</main>
 </body>
 </html>
 
