media tarea echa

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasteleria</title>
-    <link rel="stylesheet" href="style.css"
 </head>
-<body>
+<body class="fondo">
   <header>
-    <nav>
+     <nav class="nav">
       <ul>
         <li>inicio</li>
         <li><a href="./paginas/contacto.html">contacto</a></li>
@@ -66,17 +66,9 @@
   
 </table>
 </main><br>
-<footer>
+<footer class="footer">
   creado por tobias riffel nacido en 2005 
-</footer>
-<main>
-  <div><p>¡me encanta css!</p></div><br>
-  
-  <div class="azul"></div>
-    <div class="rojo"></div>
-    <div class="verde"></div>
-    <div class="gris"></div>
-</main>
+</footer> 
 </body>
 </html>
 
