--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>horarios</title>
@@ -11,7 +12,7 @@
 <tr>
     <td colspan="5">dias de la semana</td>
 </tr>
-<tr>
+<tr class="dias">
     <td>lunes</td>
     <td>martes</td>
     <td>miercoles</td>
