--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>horarios</title>
 </head>
-<body>
+<body class="bodyhorario">
     <h1>TABLA DE HORARIOS</h1>
    <table border="3">
 <tr>
     <td colspan="5">dias de la semana</td>
 </tr>
 <tr class="dias">
-    <td>lunes</td>
-    <td>martes</td>
-    <td>miercoles</td>
-    <td>jueves</td>
-    <td>viernes</td>
+    <td class="lunes">lunes</td>
+    <td class="martes">martes</td>
+    <td class="miercoles">miercoles</td>
+    <td class="jueves">jueves</td>
+    <td class="viernes">viernes</td>
 </tr>
-<tr>
-    <td>7:30 a 12:00</td>
-    <td>7:30 a 12:00</td>
-    <td>7:30 a 12:00</td>
-    <td>7:30 a 14:00</td>
-    <td>8:00 a 16:00</td>
+<tr class="horario">
+    <td class="ho1">7:30 a 12:00</td>
+    <td class="ho2">7:30 a 12:00</td>
+    <td class="ho3">7:30 a 12:00</td>
+    <td class="ho4">7:30 a 14:00</td>
+    <td class="ho5">8:00 a 16:00</td>
 </tr>
-<tr>
-    <td>1:30 a 18:00</td>
-    <td>1:30 a 18:00</td>
-    <td>1:30 a 18:00</td>
-    <td>15:00 a 18:00</td>
+<tr class="horario2">
+    <td class="ho6">1:30 a 18:00</td>
+    <td class="ho7">1:30 a 18:00</td>
+    <td class="ho8">1:30 a 18:00</td>
+    <td class="ho9">15:00 a 18:00</td>
     <td></td>
 </tr>
    </table>
