--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body class="fondo">
   <header>
-     <nav class="nav">
-      <ul>
-        <li>inicio</li>
+     <nav>
+      <ul class="ul">
+        <li><a href="./index.html">inicio</a></li>
         <li><a href="./paginas/contacto.html">contacto</a></li>
         <li><a href="./paginas/horarios.html">horario de atencion</a></li>
         <li><a href="#section_id">direcciones</a></li>
