--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -7,6 +7,16 @@
     <title>contacto</title>
 </head>
 <body>
+    <header>
+        <nav>
+         <ul class="ul">
+           <li><a href="../index.html">inicio</a></li>
+           <li><a href="../paginas/contacto.html">contacto</a></li>
+           <li><a href="../paginas/horarios.html">horario de atencion</a></li>
+           <li><a href="#section_id">direcciones</a></li>
+         </ul>
+       </nav>
+     </header>
     <main>
         <header>
             <form method="" action="">
