--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -7,6 +7,16 @@
     <title>horarios</title>
 </head>
 <body class="bodyhorario">
+    <header>
+        <nav>
+         <ul class="ul">
+           <li><a href="../index.html">inicio</a></li>
+           <li><a href="../paginas/contacto.html">contacto</a></li>
+           <li><a href="../paginas/horarios.html">horario de atencion</a></li>
+           <li><a href="#section_id">direcciones</a></li>
+         </ul>
+       </nav>
+     </header>
     <h1>TABLA DE HORARIOS</h1>
    <table border="3">
 <tr>
