--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
 </head>
-<body>
+<body class="fondo3">
     <header>
         <nav>
          <ul class="ul">
@@ -62,6 +62,9 @@
             contraseña: <input type="password" name="pass"><br>
 </form>
     </header>
-    </main>
+    </main><br>
+    <footer class="footer">
+        creado por tobias riffel nacido en 2005 
+      </footer> 
 </body>
 </html>
