--- a/paginas/horarios.html
+++ b/paginas/horarios.html
@@ -13,11 +13,11 @@
            <li><a href="../index.html">inicio</a></li>
            <li><a href="../paginas/contacto.html">contacto</a></li>
            <li><a href="../paginas/horarios.html">horario de atencion</a></li>
-           <li><a href="#section_id">direcciones</a></li>
+           <li><a href="#tabla">direcciones</a></li>
          </ul>
        </nav>
      </header>
-    <h1>TABLA DE HORARIOS</h1>
+    <h1 id="TABLA">TABLA DE HORARIOS</h1>
    <table border="3">
 <tr>
     <td colspan="5">dias de la semana</td>
@@ -43,6 +43,9 @@
     <td class="ho9">15:00 a 18:00</td>
     <td></td>
 </tr>
-   </table>
+   </table><br>
+   <footer class="footer">
+    creado por tobias riffel nacido en 2005 
+  </footer> 
 </body>
 </html>
