--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasteleria</title>
+    <title>artesania</title>
 </head>
 <body class="fondo">
   <header>
@@ -12,7 +12,7 @@
       <ul class="ul">
         <li><a href="./index.html">inicio</a></li>
         <li><a href="./paginas/contacto.html">contacto</a></li>
-        <li><a href="./paginas/horarios.html">horario de atencion</a></li>
+        <li><a href="./paginas/tiposdetortas.html">tipos de tortas</a></li>
         <li><a href="#section_id">direcciones</a></li>
       </ul>
     </nav>
