--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,7 +12,7 @@
          <ul class="ul">
            <li><a href="../index.html">inicio</a></li>
            <li><a href="../paginas/contacto.html">contacto</a></li>
-           <li><a href="../paginas/horarios.html">horario de atencion</a></li>
+           <li><a href="../paginas/tiposdetortas.htmls">horario de atencion</a></li>
            <li><a href="#section_id">direcciones</a></li>
          </ul>
        </nav>
