--- a/paginas/tiposdetortas.html
+++ b/paginas/tiposdetortas.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>horarios</title>
+    <title>tipos de tortas</title>
 </head>
 <body class="bodyhorario">
     <header>
@@ -12,7 +12,7 @@
          <ul class="ul">
            <li><a href="../index.html">inicio</a></li>
            <li><a href="../paginas/contacto.html">contacto</a></li>
-           <li><a href="../paginas/horarios.html">horario de atencion</a></li>
+           <li><a href="../paginas/tiposdetortas.html">horario de atencion</a></li>
            <li><a href="#tabla">direcciones</a></li>
          </ul>
        </nav>
