--- a/proyecto/novedades.html
+++ b/proyecto/novedades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contacto</title>
+    <title>novedades</title>
 </head>
 <body>
     <header>
@@ -11,8 +11,8 @@
          <ul>
            <li><a href="../proyecto/index.html">inicio</a></li>
            <li><a href="../proyecto/contacto1.html">contacto</a></li>
-           <li><a>tipos de tortas</a></li>
-           <li><a>novedades</a></li>
+           <li><a href="../proyecto/tiposdetortas.html">tipos de tortas</a></li>
+           <li><a href="../proyecto/novedades.html">novedades</a></li>
          </ul>
        </nav>
      </header>
