--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
          <ul>
-           <li><a>inicio</a></li>
-           <li><a>contacto</a></li>
-           <li><a>tipos de tortas</a></li>
+           <li><a href="./index.html">inicio</a></li>
+           <li><a href="./contacto1.html">contacto</a></li>
+           <li><a href="./tiposdetortas.html">tipos de tortas</a></li>
            <li><a>novedades</a></li>
          </ul>
        </nav>
