--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARTESANIA</title>
 </head>
-<body>
-    <header>
+<body class="fondo1">
+    <header>  
         <nav>
-         <ul>
+         <ul class="t2">
            <li><a href="./index.html">inicio</a></li>
            <li><a href="./contacto1.html">contacto</a></li>
            <li><a href="./tiposdetortas.html">tipos de tortas</a></li>
-           <li><a>novedades</a></li>
+           <li><a href="./novedades.html">novedades</a></li>
          </ul>
        </nav>
      </header>
