--- a/proyecto/tiposdetortas.html
+++ b/proyecto/tiposdetortas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tipos de tortas</title>
@@ -12,7 +13,7 @@
            <li><a href="../proyecto/index.html">inicio</a></li>
            <li><a href="../proyecto/contacto1.html">contacto</a></li>
            <li><a href="../proyecto/tiposdetortas.html">tipos de tortas</a></li>
-           <li><a>novedades</a></li>
+           <li><a href="../proyecto/novedades.html">novedades</a></li>
          </ul>
        </nav>
      </header>
