--- a/proyecto/tiposdetortas.html
+++ b/proyecto/tiposdetortas.html
@@ -9,14 +9,52 @@
 </head>
 <body>
     <header>
-        <nav>
-         <ul>
-           <li><a href="../proyecto/index.html">inicio</a></li>
-           <li><a href="../proyecto/contacto1.html">contacto</a></li>
-           <li><a href="../proyecto/tiposdetortas.html">tipos de tortas</a></li>
-           <li><a href="../proyecto/novedades.html">novedades</a></li>
-         </ul>
-       </nav>
+        
+      <div class="caja1">
+        <nav class="navbar" fixed-top bg-body-tertiary style="background-color: #dfacd8;">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">ARTESANIA MARIA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">menu</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../proyecto/index.html">inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../proyecto/tiposdetortas.html">tipo de tortas</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      mas
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../proyecto/novedades.html">novedades</a></li>
+                      <li><a class="dropdown-item" href="../proyecto/contacto1.html">contactos</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+                <form class="d-flex mt-3" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">buscador</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </nav>
+        </div>
+
+
      </header>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
